shared/fmod/fmod.odin


    @(link_name="FMOD_SoundGroup_Release")
    FMOD_SoundGroup_Release :: proc(soundgroup : ^FMOD_SOUNDGROUP) -> FMOD_RESULT ---

    @(link_name="FMOD_SoundGroup_GetSystemObject")
    FMOD_SoundGroup_GetSystemObject :: proc(soundgroup : ^FMOD_SOUNDGROUP, system : ^^FMOD_SYSTEM) -> FMOD_RESULT ---

    @(link_name="FMOD_SoundGroup_SetMaxAudible")
    FMOD_SoundGroup_SetMaxAudible :: proc(soundgroup : ^FMOD_SOUNDGROUP, maxaudible : _c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_SoundGroup_GetMaxAudible")
    FMOD_SoundGroup_GetMaxAudible :: proc(soundgroup : ^FMOD_SOUNDGROUP, maxaudible : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_SoundGroup_SetMaxAudibleBehavior")
    FMOD_SoundGroup_SetMaxAudibleBehavior :: proc(soundgroup : ^FMOD_SOUNDGROUP, behavior : FMOD_SOUNDGROUP_BEHAVIOR) -> FMOD_RESULT ---

    @(link_name="FMOD_SoundGroup_GetMaxAudibleBehavior")
    FMOD_SoundGroup_GetMaxAudibleBehavior :: proc(soundgroup : ^FMOD_SOUNDGROUP, behavior : ^FMOD_SOUNDGROUP_BEHAVIOR) -> FMOD_RESULT ---

    @(link_name="FMOD_SoundGroup_SetMuteFadeSpeed")
    FMOD_SoundGroup_SetMuteFadeSpeed :: proc(soundgroup : ^FMOD_SOUNDGROUP, speed : _c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_SoundGroup_GetMuteFadeSpeed")
    FMOD_SoundGroup_GetMuteFadeSpeed :: proc(soundgroup : ^FMOD_SOUNDGROUP, speed : ^_c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_SoundGroup_SetVolume")
    FMOD_SoundGroup_SetVolume :: proc(soundgroup : ^FMOD_SOUNDGROUP, volume : _c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_SoundGroup_GetVolume")
    FMOD_SoundGroup_GetVolume :: proc(soundgroup : ^FMOD_SOUNDGROUP, volume : ^_c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_SoundGroup_Stop")
    FMOD_SoundGroup_Stop :: proc(soundgroup : ^FMOD_SOUNDGROUP) -> FMOD_RESULT ---

    @(link_name="FMOD_SoundGroup_GetName")
    FMOD_SoundGroup_GetName :: proc(soundgroup : ^FMOD_SOUNDGROUP, name : cstring, namelen : _c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_SoundGroup_GetNumSounds")
    FMOD_SoundGroup_GetNumSounds :: proc(soundgroup : ^FMOD_SOUNDGROUP, numsounds : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_SoundGroup_GetSound")
    FMOD_SoundGroup_GetSound :: proc(soundgroup : ^FMOD_SOUNDGROUP, index : _c.int, sound : ^^FMOD_SOUND) -> FMOD_RESULT ---

    @(link_name="FMOD_SoundGroup_GetNumPlaying")
    FMOD_SoundGroup_GetNumPlaying :: proc(soundgroup : ^FMOD_SOUNDGROUP, numplaying : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_SoundGroup_SetUserData")
    FMOD_SoundGroup_SetUserData :: proc(soundgroup : ^FMOD_SOUNDGROUP, userdata : rawptr) -> FMOD_RESULT ---

    @(link_name="FMOD_SoundGroup_GetUserData")
    FMOD_SoundGroup_GetUserData :: proc(soundgroup : ^FMOD_SOUNDGROUP, userdata : ^rawptr) -> FMOD_RESULT ---

    @(link_name="FMOD_SoundGroup_GetMemoryInfo")
    FMOD_SoundGroup_GetMemoryInfo :: proc(soundgroup : ^FMOD_SOUNDGROUP, memorybits : _c.uint, event_memorybits : _c.uint, memoryused : ^_c.uint, memoryused_details : ^FMOD_MEMORY_USAGE_DETAILS) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_Release")
    FMOD_DSP_Release :: proc(dsp : ^FMOD_DSP) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_GetSystemObject")
    FMOD_DSP_GetSystemObject :: proc(dsp : ^FMOD_DSP, system : ^^FMOD_SYSTEM) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_AddInput")
    FMOD_DSP_AddInput :: proc(dsp : ^FMOD_DSP, target : ^FMOD_DSP, connection : ^^FMOD_DSPCONNECTION) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_DisconnectFrom")
    FMOD_DSP_DisconnectFrom :: proc(dsp : ^FMOD_DSP, target : ^FMOD_DSP) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_DisconnectAll")
    FMOD_DSP_DisconnectAll :: proc(dsp : ^FMOD_DSP, inputs : _c.int, outputs : _c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_Remove")
    FMOD_DSP_Remove :: proc(dsp : ^FMOD_DSP) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_GetNumInputs")
    FMOD_DSP_GetNumInputs :: proc(dsp : ^FMOD_DSP, numinputs : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_GetNumOutputs")
    FMOD_DSP_GetNumOutputs :: proc(dsp : ^FMOD_DSP, numoutputs : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_GetInput")
    FMOD_DSP_GetInput :: proc(dsp : ^FMOD_DSP, index : _c.int, input : ^^FMOD_DSP, inputconnection : ^^FMOD_DSPCONNECTION) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_GetOutput")
    FMOD_DSP_GetOutput :: proc(dsp : ^FMOD_DSP, index : _c.int, output : ^^FMOD_DSP, outputconnection : ^^FMOD_DSPCONNECTION) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_SetActive")
    FMOD_DSP_SetActive :: proc(dsp : ^FMOD_DSP, active : _c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_GetActive")
    FMOD_DSP_GetActive :: proc(dsp : ^FMOD_DSP, active : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_SetBypass")
    FMOD_DSP_SetBypass :: proc(dsp : ^FMOD_DSP, bypass : _c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_GetBypass")
    FMOD_DSP_GetBypass :: proc(dsp : ^FMOD_DSP, bypass : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_SetSpeakerActive")
    FMOD_DSP_SetSpeakerActive :: proc(dsp : ^FMOD_DSP, speaker : FMOD_SPEAKER, active : _c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_GetSpeakerActive")
    FMOD_DSP_GetSpeakerActive :: proc(dsp : ^FMOD_DSP, speaker : FMOD_SPEAKER, active : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_Reset")
    FMOD_DSP_Reset :: proc(dsp : ^FMOD_DSP) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_SetParameter")
    FMOD_DSP_SetParameter :: proc(dsp : ^FMOD_DSP, index : _c.int, value : _c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_GetParameter")
    FMOD_DSP_GetParameter :: proc(dsp : ^FMOD_DSP, index : _c.int, value : ^_c.float, valuestr : cstring, valuestrlen : _c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_GetNumParameters")
    FMOD_DSP_GetNumParameters :: proc(dsp : ^FMOD_DSP, numparams : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_GetParameterInfo")
    FMOD_DSP_GetParameterInfo :: proc(dsp : ^FMOD_DSP, index : _c.int, name : cstring, label : cstring, description : cstring, descriptionlen : _c.int, min : ^_c.float, max : ^_c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_ShowConfigDialog")
    FMOD_DSP_ShowConfigDialog :: proc(dsp : ^FMOD_DSP, hwnd : rawptr, show : _c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_GetInfo")
    FMOD_DSP_GetInfo :: proc(dsp : ^FMOD_DSP, name : cstring, version : ^_c.uint, channels : ^_c.int, configwidth : ^_c.int, configheight : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_GetType")
    FMOD_DSP_GetType :: proc(dsp : ^FMOD_DSP, type : ^FMOD_DSP_TYPE) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_SetDefaults")
    FMOD_DSP_SetDefaults :: proc(dsp : ^FMOD_DSP, frequency : _c.float, volume : _c.float, pan : _c.float, priority : _c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_GetDefaults")
    FMOD_DSP_GetDefaults :: proc(dsp : ^FMOD_DSP, frequency : ^_c.float, volume : ^_c.float, pan : ^_c.float, priority : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_SetUserData")
    FMOD_DSP_SetUserData :: proc(dsp : ^FMOD_DSP, userdata : rawptr) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_GetUserData")
    FMOD_DSP_GetUserData :: proc(dsp : ^FMOD_DSP, userdata : ^rawptr) -> FMOD_RESULT ---

    @(link_name="FMOD_DSP_GetMemoryInfo")
    FMOD_DSP_GetMemoryInfo :: proc(dsp : ^FMOD_DSP, memorybits : _c.uint, event_memorybits : _c.uint, memoryused : ^_c.uint, memoryused_details : ^FMOD_MEMORY_USAGE_DETAILS) -> FMOD_RESULT ---

    @(link_name="FMOD_DSPConnection_GetInput")
    FMOD_DSPConnection_GetInput :: proc(dspconnection : ^FMOD_DSPCONNECTION, input : ^^FMOD_DSP) -> FMOD_RESULT ---

    @(link_name="FMOD_DSPConnection_GetOutput")
    FMOD_DSPConnection_GetOutput :: proc(dspconnection : ^FMOD_DSPCONNECTION, output : ^^FMOD_DSP) -> FMOD_RESULT ---

    @(link_name="FMOD_DSPConnection_SetMix")
    FMOD_DSPConnection_SetMix :: proc(dspconnection : ^FMOD_DSPCONNECTION, volume : _c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_DSPConnection_GetMix")
    FMOD_DSPConnection_GetMix :: proc(dspconnection : ^FMOD_DSPCONNECTION, volume : ^_c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_DSPConnection_SetLevels")
    FMOD_DSPConnection_SetLevels :: proc(dspconnection : ^FMOD_DSPCONNECTION, speaker : FMOD_SPEAKER, levels : ^_c.float, numlevels : _c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_DSPConnection_GetLevels")
    FMOD_DSPConnection_GetLevels :: proc(dspconnection : ^FMOD_DSPCONNECTION, speaker : FMOD_SPEAKER, levels : ^_c.float, numlevels : _c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_DSPConnection_SetUserData")
    FMOD_DSPConnection_SetUserData :: proc(dspconnection : ^FMOD_DSPCONNECTION, userdata : rawptr) -> FMOD_RESULT ---

    @(link_name="FMOD_DSPConnection_GetUserData")
    FMOD_DSPConnection_GetUserData :: proc(dspconnection : ^FMOD_DSPCONNECTION, userdata : ^rawptr) -> FMOD_RESULT ---

    @(link_name="FMOD_DSPConnection_GetMemoryInfo")
    FMOD_DSPConnection_GetMemoryInfo :: proc(dspconnection : ^FMOD_DSPCONNECTION, memorybits : _c.uint, event_memorybits : _c.uint, memoryused : ^_c.uint, memoryused_details : ^FMOD_MEMORY_USAGE_DETAILS) -> FMOD_RESULT ---

    @(link_name="FMOD_Geometry_Release")
    FMOD_Geometry_Release :: proc(geometry : ^FMOD_GEOMETRY) -> FMOD_RESULT ---

    @(link_name="FMOD_Geometry_AddPolygon")
    FMOD_Geometry_AddPolygon :: proc(geometry : ^FMOD_GEOMETRY, directocclusion : _c.float, reverbocclusion : _c.float, doublesided : _c.int, numvertices : _c.int, vertices : ^FMOD_VECTOR, polygonindex : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_Geometry_GetNumPolygons")
    FMOD_Geometry_GetNumPolygons :: proc(geometry : ^FMOD_GEOMETRY, numpolygons : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_Geometry_GetMaxPolygons")
    FMOD_Geometry_GetMaxPolygons :: proc(geometry : ^FMOD_GEOMETRY, maxpolygons : ^_c.int, maxvertices : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_Geometry_GetPolygonNumVertices")
    FMOD_Geometry_GetPolygonNumVertices :: proc(geometry : ^FMOD_GEOMETRY, index : _c.int, numvertices : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_Geometry_SetPolygonVertex")
    FMOD_Geometry_SetPolygonVertex :: proc(geometry : ^FMOD_GEOMETRY, index : _c.int, vertexindex : _c.int, vertex : ^FMOD_VECTOR) -> FMOD_RESULT ---

    @(link_name="FMOD_Geometry_GetPolygonVertex")
    FMOD_Geometry_GetPolygonVertex :: proc(geometry : ^FMOD_GEOMETRY, index : _c.int, vertexindex : _c.int, vertex : ^FMOD_VECTOR) -> FMOD_RESULT ---

    @(link_name="FMOD_Geometry_SetPolygonAttributes")
    FMOD_Geometry_SetPolygonAttributes :: proc(geometry : ^FMOD_GEOMETRY, index : _c.int, directocclusion : _c.float, reverbocclusion : _c.float, doublesided : _c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_Geometry_GetPolygonAttributes")
    FMOD_Geometry_GetPolygonAttributes :: proc(geometry : ^FMOD_GEOMETRY, index : _c.int, directocclusion : ^_c.float, reverbocclusion : ^_c.float, doublesided : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_Geometry_SetActive")
    FMOD_Geometry_SetActive :: proc(geometry : ^FMOD_GEOMETRY, active : _c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_Geometry_GetActive")
    FMOD_Geometry_GetActive :: proc(geometry : ^FMOD_GEOMETRY, active : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_Geometry_SetRotation")
    FMOD_Geometry_SetRotation :: proc(geometry : ^FMOD_GEOMETRY, forward : ^FMOD_VECTOR, up : ^FMOD_VECTOR) -> FMOD_RESULT ---

    @(link_name="FMOD_Geometry_GetRotation")
    FMOD_Geometry_GetRotation :: proc(geometry : ^FMOD_GEOMETRY, forward : ^FMOD_VECTOR, up : ^FMOD_VECTOR) -> FMOD_RESULT ---

    @(link_name="FMOD_Geometry_SetPosition")
    FMOD_Geometry_SetPosition :: proc(geometry : ^FMOD_GEOMETRY, position : ^FMOD_VECTOR) -> FMOD_RESULT ---

    @(link_name="FMOD_Geometry_GetPosition")
    FMOD_Geometry_GetPosition :: proc(geometry : ^FMOD_GEOMETRY, position : ^FMOD_VECTOR) -> FMOD_RESULT ---
